--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
     <title>Loader</title>
   </head>
   <body>
-    <h1>Germán Cano - GL</h1>
+    <h1>Germán Cano</h1>
     <div class="loader"></div>
     <div class="loader-text">Cargando...</div>
-
-
+    
     <section class="image-section">
-      <!-- <video src="video.mp4" alt="Video 1" controls autoplay></video> />; -->
       <img src="https://image.shutterstock.com/image-photo/3d-image-neon-abstract-260nw-2258892637.jpg" alt="imagen 2" />          
       <img src="https://image.shutterstock.com/image-photo/milk-chocolate-splash-smooth-abstract-260nw-2259581367.jpg" alt="imagen 3" />
       <img src="https://image.shutterstock.com/image-photo/abstract-colorful-3d-shape-cinema-260nw-2248212677.jpg" alt="imagen 4" />
